Optimize comments in sass files

--- a/src/sass/cards.scss
+++ b/src/sass/cards.scss
@@ -1,7 +1,7 @@
-/*
- * CSS specific to the 'cards' page (cards.html).
- */
-
+// - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+//  CSS specific to the 'cards' page (cards.html).
+// - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+//
 @import "variables";
 @import "node_modules/bootswatch/dist/darkly/variables";
 @import "node_modules/bootstrap/scss/functions";
