Major update to all dependencies
This includes an update to TypeScript (from 2.8.1 to 3.4.2),
a major webpack upgrade, and an upgrade to test tool versions.
These contained some breaking changes which required changes
to the application in order to compensate. (none of them
functional of course)

--- a/resources/include/_footer.html
+++ b/resources/include/_footer.html
@@ -1,6 +1,5 @@
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" crossorigin="anonymous"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"></script>
 <script src="js/bootstrap.min.js"
         crossorigin="anonymous"></script>
