--- a/resources/include/_head.html
+++ b/resources/include/_head.html
@@ -71,9 +71,10 @@
     <script type="text/javascript" defer src="js/l20n.min.js"></script>  <!-- should be first deferred script -->
 
     <link rel="stylesheet" type="text/css"
-        href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.6/cookieconsent.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.6/cookieconsent.min.js"
-        integrity="sha384-MUoyijeybCtm4GFBhubnlrS2TscWkBDFkwCzXMofOGhiTYxVzoSfwaCM7HtNFzwN"
+        href="https://cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.1.0/cookieconsent.min.css"
+        integrity="sha384-AJ82o1PQz2xMlVWjJ+IdPSfyCVS/nJeYbLcpPhm/cEPrewaEdaYkaG6LCsquvogf">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.1.0/cookieconsent.min.js"
+        integrity="sha384-l+e8/kt7mRYg7RUc/i3MsNwDJlWxkWkFDX10LF/iNglZLT96GBMAPrbaH2GP2lQy"
         crossorigin="anonymous"></script>
     <script type="text/javascript">
         window.addEventListener("load", function(){
