Add CORS marker to cookieconsent css

--- a/resources/include/_head.html
+++ b/resources/include/_head.html
@@ -70,7 +70,7 @@
     <script type="text/javascript">$(document).ready(CivBuddy.initPage('${props.pageName}'));</script>
     <script type="text/javascript" defer src="js/l20n.min.js"></script>  <!-- should be first deferred script -->
 
-    <link rel="stylesheet" type="text/css"
+    <link rel="stylesheet" type="text/css" crossorigin="anonymous"
         href="https://cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.1.0/cookieconsent.min.css"
         integrity="sha384-AJ82o1PQz2xMlVWjJ+IdPSfyCVS/nJeYbLcpPhm/cEPrewaEdaYkaG6LCsquvogf">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.1.0/cookieconsent.min.js"
