Switch from Google Analytics to plausible.io
- privacy-friendly, no personal information is collected
- no cookies, so no cookie consent required
- faster loading, smaller script

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,15 +7,7 @@
     <meta name="keywords" content="{{ site.name }}, civilization, Francis Tresham, Avalon Hill, board game,
             advanced civilization, western expansion" />
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-    {% if site.gaaccount != '' %}
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.gaaccount }}"></script>
-    <script type="text/javascript">
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', '{{ site.gaaccount }}', {'anonymize_ip': true});
-    </script>{% endif %}
+    <script async defer data-domain="civbuddy.org" src="https://plausible.io/js/plausible.js"></script>
 
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -42,18 +34,4 @@
     <meta name="msapplication-TileColor" content="#2a3b85">
     <meta name="msapplication-TileImage" content="/mstile-144x144.png">
     <meta name="theme-color" content="#2a3b85">
-    
-    <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.6/cookieconsent.min.css" />
-    <script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.6/cookieconsent.min.js"></script>
-    <script type="text/javascript">
-        window.addEventListener("load", function(){
-            window.cookieconsent.initialise({
-                "cookie": { "domain": ".civbuddy.org", "expiryDays": 730 },
-                "palette": {
-                    "popup": { "background": "#efefef", "text": "#404040" },
-                    "button": { "background": "#8ec760", "text": "#ffffff" }
-                }
-            });
-        });
-    </script>
 </head>
