--- a/resources/include/_head.html
+++ b/resources/include/_head.html
@@ -2,14 +2,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119469398-3"></script>
-    <script type="text/javascript">
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'UA-119469398-3', {'anonymize_ip': true});
-    </script>
+    <!-- Cookie-free, privacy-friendly analytics -->
+    <script async defer data-domain="app2.civbuddy.org" src="https://plausible.io/js/plausible.js"></script>
 
     <link rel="stylesheet" crossorigin="anonymous" href="css/open-iconic-bootstrap.min.css">
     <link rel="stylesheet" crossorigin="anonymous" href="css/civbuddy.css">
@@ -69,24 +63,6 @@
     <script type="text/javascript" src="js/civbuddy.js"></script>
     <script type="text/javascript">$(document).ready(CivBuddy.initPage('${props.pageName}'));</script>
     <script type="text/javascript" defer src="js/l20n.min.js"></script>  <!-- should be first deferred script -->
-
-    <link rel="stylesheet" type="text/css" crossorigin="anonymous"
-        href="https://cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.1.0/cookieconsent.min.css"
-        integrity="sha384-AJ82o1PQz2xMlVWjJ+IdPSfyCVS/nJeYbLcpPhm/cEPrewaEdaYkaG6LCsquvogf">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.1.0/cookieconsent.min.js"
-        integrity="sha384-l+e8/kt7mRYg7RUc/i3MsNwDJlWxkWkFDX10LF/iNglZLT96GBMAPrbaH2GP2lQy"
-        crossorigin="anonymous"></script>
-    <script type="text/javascript">
-        window.addEventListener("load", function(){
-            window.cookieconsent.initialise({
-                "cookie": { "domain": ".civbuddy.org", "expiryDays": 730 },
-                "palette": {
-                    "popup": { "background": "#383b75" },
-                    "button": { "background": "#f1d600" }
-                }
-            });
-        });
-    </script>
 
     <script id="flagTemplate" type="x-tmpl-mustache">
         <a class="nav-link" href="{{#langParam}}?lang={{ langParam }}"{{/langParam}}{{^langParam}}#"
